basic popup and config page

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,12 @@
 {
 	"manifest_version": 3,
-	"name": "Covered",
+	"name": "Cloak",
+	"description": "stop seeing those who annoy your online experience",
+	"author": "André Yañez",
 	"version": "0.1",
+	"action": {
+		"default_popup": "index.html"
+	},
 	"content_scripts": [
 		{
 			"matches": ["https://twitter.com/*"],
